# oop-game-lib

./: CMakeLists.txt  improvements.txt  log.txt  main.cpp
Entities/: Entities_Declarations.h  Entity.h
Entities/Creatures/: Creature.h  Player.h
Entities/Creatures/Enemies/: Enemy.h  EnemyFactory.h
Entities/Items/: Item.h  ItemFactory.h
Field/: Field.cpp  Field.h  FieldBuilder.cpp  FieldBuilder.h
Field/Cells/: BaseCell.h  Cell.h  Entry.h  Exit.h  Wall.h
Viewers/: CellView.cpp  CellView.h  ConsoleFieldView.cpp  FieldView.h
Viewers/console/: CellView.cpp  CellView.h  ConsoleFieldView.cpp  ConsoleFieldView.h  ConsoleObjectView.h  EntityView.cpp  EntityView.h
controllers/: BaseController.h  EnemyController.h  PlayerController.h  keys.txt
game/: Game.h
logging/: BasePublisher.h  Log.h
logging/loggers/: BaseLogger.h  ConsoleLogger.h  FileLogger.h
report/: .~lock.0303_OOP_Denezhniy_AA_LR3.odt#  0303_OOP_Denezhniy_AA_LR1 .odt  0303_OOP_Denezhniy_AA_LR2.odt  0303_OOP_Denezhniy_AA_LR3.odt  0303_OOP_Denezhniy_AA_LR4.odt  lb6_Denezhniy.odt
rules/: EnemyCountTemplate.h  FieldCharacteristicsTemplate.h  ItemsCountTemplate.h  PlayerCharacteristicsTemplate.h  Rules.h
saving/: CellInfo.h  FieldInfo.h  Serialization.h
tests/: lab2Tests.cpp
